--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/caitp/gulp-acorn-ddescribe-iit#readme",
   "dependencies": {
-    "acorn": "^2.0.4"
+    "acorn": "^2.0.4",
+    "gulp-util": "^3.0.6"
   }
 }
