chore(package.json): install devDependency mocha@^2.2.5

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "acorn": "^2.0.4",
     "gulp-util": "^3.0.6",
     "through2": "^2.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.2.5"
   }
 }
