--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "gulp-ddescribe-iit + full JS parser",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter 'dot' test/*.spec.js"
   },
   "repository": {
     "type": "git",
