--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - npm install istanbul coveralls
 
 script:
+  - ./tools/ddescribe-it.js
   - ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --reporter dot
 
 after_success:
